@@ -25,6 +25,7 @@ import java.nio.ByteBuffer;
 import java.util.*;
 
 import org.apache.cassandra.config.CFMetaData;
+import org.apache.cassandra.config.ColumnDefinition;
 import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.db.*;
 import org.apache.cassandra.db.marshal.AbstractType;
@@ -332,7 +333,23 @@ public class SSTableExport
      */
     public static void export(String ssTableFile, PrintStream outs, String[] excludes) throws IOException
     {
-        export(SSTableReader.open(Descriptor.fromFilename(ssTableFile)), outs, excludes);
+        Descriptor descriptor = Descriptor.fromFilename(ssTableFile);
+        CFMetaData metadata;
+        if (descriptor.cfname.contains("."))
+        {
+            // look up index metadata from parent
+            int i = descriptor.cfname.indexOf(".");
+            String parentName = descriptor.cfname.substring(0, i);
+            CFMetaData parent = DatabaseDescriptor.getCFMetaData(descriptor.ksname, parentName);
+            ColumnDefinition def = parent.getColumnDefinitionForIndex(descriptor.cfname.substring(i + 1));
+            metadata = CFMetaData.newIndexMetadata(parent, def, ColumnFamilyStore.indexComparator());
+        }
+        else
+        {
+            metadata = DatabaseDescriptor.getCFMetaData(descriptor.ksname, descriptor.cfname);
+        }
+
+        export(SSTableReader.open(descriptor, metadata), outs, excludes);
     }
 
     /**
